--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-# Ignore github folder
-.github*
+# # Ignore github folder
+# .github*
 
 shortcuts.rb
