--- a/.github/workflows/run_all_tests.yml
+++ b/.github/workflows/run_all_tests.yml
@@ -1,59 +1,26 @@
 name: Run RSpec Tests
-
+env:
+  RUBY_VERSION: 2.7.2
 on: [push, pull_request]
-push:
-  paths:
-    - 'spec/**'
-    pull_request:
-      paths:
-        - 'spec/**'
-
-        jobs:
-          build:
-            name: CI
-            runs-on: ubuntu-latest
-            env:
-              api-dir: ./spec
-
-              services:
-                postgres:
-                  image: postgres:11.6
-                  ports: ["5432:5432"]
-                  options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-                  redis:
-                    image: redis
-                    ports: ["6379:6379"]
-                    elasticsearch:
-                      image: elasticsearch:6.8.8
-                      ports: ["9200:9200"]
-                      options: -e="discovery.type=single-node" --health-cmd="curl http://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
-
-                      steps:
-                        - uses: actions/checkout@v1
-                        - uses: actions/setup-ruby@v1
-                        with:
-                          ruby-version: 2.6.6
-
-                          - name: Install PostgreSQL
-                          run: sudo apt-get -yqq install libpq-dev
-
-                          - name: Run bundle install
-                          working-directory: ${{env.api-dir}}
-                          run: |
-                          gem install bundler
-                          bundle install --jobs 4 --retry 3
-                          - name: Setup Database
-                          working-directory: ${{env.api-dir}}
-                          env:
-                            RAILS_ENV: test
-                            PGHOST: localhost
-                            PGUSER: postgres
-                            run: bin/rails db:create db:schema:load
-
-                            - name: Build and test with rspec
-                            working-directory: ${{env.api-dir}}
-                            env:
-                              RAILS_ENV: test
-                              PGHOST: localhost
-                              PGUSER: postgres
-                              run: bundle exec rspec spec
+job:
+  ...
+  rspec-test:
+    name: RSpec
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-ruby@v1
+      with:
+        ruby-version: ${{ env.RUBY_VERSION }}
+        - name: Install postgres client
+        run: sudo apt-get install libpq-dev
+        - name: Install dependencies
+        run: |
+        gem install bundler
+        bundler install
+        - name: Create database
+        run: |
+        bundler exec rails db:create RAILS_ENV=test
+        bundler exec rails db:migrate RAILS_ENV=test
+        - name: Run tests
+        run: bundler exec rake
