--- a/.github/workflows/run_all_tests.yml
+++ b/.github/workflows/run_all_tests.yml
@@ -2,8 +2,7 @@ name: Run RSpec Tests
 env:
   RUBY_VERSION: 2.7.2
 on: [push, pull_request]
-job:
-  ...
+jobs:
   rspec-test:
     name: RSpec
     runs-on: ubuntu-18.04
