--- a/.github/workflows/run_all_tests.yml
+++ b/.github/workflows/run_all_tests.yml
@@ -2,11 +2,13 @@ name: Run RSpec Tests
 on: [push, pull_request]
 jobs:
   rspec-test:
-    name: RSpec
+    name: RSpec Tests
     runs-on: ubuntu-latest
-    env:
-      PGHOST: localhost
-      PGUSER: postgres
-      RAILS_ENV: test
-      run:
-        bundle exec rspec
+    steps:
+      - name: Run Tests
+        env:
+          PGHOST: localhost
+          PGUSER: postgres
+          RAILS_ENV: test
+          run:
+            bundle exec rspec
