Try new action wholesale

--- a/.github/workflows/run_all_tests.yml
+++ b/.github/workflows/run_all_tests.yml
@@ -10,5 +10,5 @@ jobs:
           PGHOST: localhost
           PGUSER: postgres
           RAILS_ENV: test
-          run:
+          run: |
             bundle exec rspec
