Use bundle exec 2

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -106,7 +106,7 @@ jobs:
           PGHOST: localhost
           PGUSER: myapp
         run: |
-          bin/rails db:setup
+          bundle exec rails db:setup
 
       - name: Run tests
         run: bundle exec rspec
